# dataCompression

./: CMakeLists.txt  DataHandler.hpp  HuffmanEncoding.cpp  ICompression.hpp  IDecompression.hpp  README.md  RunLengthEncodingCompression.cpp  RunLengthEncodingCompression.hpp  Untitled Diagram.drawio  dataCompression.cpp
Public/: HuffmanEncoding.hpp  MultiThreadedCompression.hpp
Source/: dataCompression.cpp
public/: Huffman.hpp  RLECompression.hpp  iCompression.hpp  iDecompression.hpp
source/: Huffman.cpp  RLECompression.cpp  dataCompression.cpp
